# tinydo

./: .gitignore  README.md  README.zh-CN.md  build-android.ps1  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/docs/: android-build.md
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  models.rs  predict.rs  reminders.rs
src-tauri/src/commands/: autostart.rs  events.rs  export.rs  mod.rs  settings.rs  tags.rs  todos.rs
src-tauri/src/sync/: client.rs  crypto.rs  engine.rs  mod.rs  models.rs
src/components/: EventPanel.tsx  FadeTransition.tsx  HistoryPanel.tsx  MiniMode.tsx  NoticeBanner.tsx  PosterPreview.tsx  PredictionBadge.tsx  SettingsPanel.tsx  StatusBar.tsx  TagBadge.tsx  TagFilter.tsx  TagManager.tsx  Timeline.tsx  TitleBar.tsx  TodoDetail.tsx  TodoInput.tsx  TodoItem.tsx  TodoList.tsx
src/components/sync/: ConflictDialog.tsx  SyncIndicator.tsx  SyncSettings.tsx
src/hooks/: useReminders.ts
src/i18n/: index.ts
src/lib/: autostart.ts  backend.ts  errorNotice.ts  export.ts  init.ts  platform.ts  poster.ts  tag-sections.ts  todo-helpers.ts  utils.ts
src/stores/: eventStore.ts  noticeStore.ts  predictStore.ts  settingsStore.ts  syncStore.ts  tagStore.ts  todoStore.ts
src/types/: index.ts
sync-server/: Cargo.toml  build.sh
sync-server/src/: db.rs  main.rs  models.rs  routes.rs
