[package]
name = "tinydo"
version = "3.0.0"
description = "A lightweight, elegant desktop to-do app"
authors = ["Hanzi"]
edition = "2021"

[lib]
name = "tinydo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
log = "0.4"
tokio = { version = "1", features = ["time", "sync", "rt"] }
base64 = "0.22"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
hostname = "0.4"

