[package]
name = "tinydo-sync"
version = "0.1.0"
edition = "2021"
description = "TinyDo sync server"

[[bin]]
name = "tinydo-sync"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4", features = ["derive", "env"] }
log = "0.4"
env_logger = "0.11"
base64 = "0.22"

[profile.release]
lto = true
strip = true
codegen-units = 1
